# RGBDCapture

./: README.md
RGBDCapture/: CMakeLists.txt  OpenNISensor.cpp
RGBDCapture/cmake/: FindOpenNI2.cmake
